# modem_forwarder

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  config.yaml  main.py  modem-forwarder.service  modem_forwarder.py  pyproject.toml  requirements.txt  syncterm_cache.lst
.github/workflows/: ci-cd.yml
modem_forwarder/: __init__.py  autologin.py  bridge.py  call_log.py  config.py  local_serial.py  logging_config.py  menu.py  metrics.py  modem.py  protocols.py  syncterm.py  terminal.py
tests/: __init__.py  conftest.py  test_autologin.py  test_config.py  test_menu.py  test_terminal.py
