[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "modem-forwarder"
version = "2.2.0"
description = "A modem-to-telnet bridge with configurable BBS menu and auto-login support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "Chris Edwards"}
]
keywords = ["modem", "bbs", "telnet", "serial", "retro", "commodore"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: System :: Networking",
]
dependencies = [
    "pyserial>=3.5",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
]

[project.urls]
Homepage = "https://github.com/chris-edwards-pub/modem_forwarder"
Repository = "https://github.com/chris-edwards-pub/modem_forwarder"
Issues = "https://github.com/chris-edwards-pub/modem_forwarder/issues"

[project.scripts]
modem-forwarder = "modem_forwarder.main:main_loop"

[tool.setuptools.packages.find]
where = ["."]
include = ["modem_forwarder*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
